Adding scripts to format code

--- a/final-project/.prettierrc.json
+++ b/final-project/.prettierrc.json
@@ -11,6 +11,12 @@
       "options": {
         "parser": "angular"
       }
+    },
+    {
+      "files": "*.scss",
+      "options": {
+        "parser": "scss"
+      }
     }
   ]
 }
