--- a/final-project/.eslintrc.json
+++ b/final-project/.eslintrc.json
@@ -43,6 +43,14 @@
         "plugin:prettier/recommended"
       ],
       "rules": {}
+    },
+    {
+      "files": [
+        "*.scss"
+      ],
+      "extends": [
+        "plugin:prettier/recommended"
+      ]
     }
   ]
 }
