--- a/final-project/package.json
+++ b/final-project/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "15.2.0",
     "rxjs": "7.8.0",
     "tslib": "2.3.0",
+    "uuid": "9.0.0",
     "zone.js": "0.12.0"
   },
   "devDependencies": {
@@ -39,6 +40,7 @@
     "@angular/cli": "15.2.5",
     "@angular/compiler-cli": "15.2.0",
     "@types/jasmine": "4.3.0",
+    "@types/uuid": "9.0.1",
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
     "eslint": "8.33.0",
